# katoptron

./: Cargo.toml  LICENSE  config.ron  config.toml  winfix.path
src/: errors.rs  lib.rs
src/recv/: listener.rs  main.rs  main_unix.rs  server.rs  status_notifier.rs
src/recv/status_notifier/: ffi.rs  iowake.rs  poll.rs
src/send/: cli.rs  main.rs  main_windows.rs  mirror.rs  proto_unix.rs
src/win/: notifs_send.cpp  win.rs
wstr_macro/: Cargo.toml
wstr_macro/src/: lib.rs
